# var-clubmonkey

./: .env  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  deployment_flow.md  main.py  package-lock.json  package.json  production_health_verification.md  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  .firebaserc  .gitignore  drizzle.config.ts  firebase.json  next.config.ts  package-lock.json  package.json
frontend/drizzle/: 0000_loving_impossible_man.sql  0000_nifty_talos.sql  0001_steady_speedball.sql  relations.ts  schema.ts
frontend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0008_snapshot.json  _journal.json
frontend/src/app/: Grainient.css  Grainient.tsx  globals.css  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/clubs/[id]/: page.tsx
frontend/src/app/collab/: page.tsx
frontend/src/app/collab/join/: page.tsx
frontend/src/app/collab/new/: page.tsx
frontend/src/app/main/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/project/[id]/: page.tsx
frontend/src/app/recommended-clubs/: page.tsx
frontend/src/components/: Aurora.css  Aurora.tsx  BorderGlow.css  BorderGlow.tsx  Navigation.tsx  PixelBlast.css  PixelBlast.tsx  PostCard.tsx  TiltedCard.css  TiltedCard.module.css  TiltedCard.tsx  button.tsx  card.tsx  field.tsx  input.tsx  login-form.tsx
frontend/src/components/ui/: separator.tsx
frontend/src/db/: schema.ts
frontend/src/lib/: firebase.ts
