[project]
name = "var-clubmonkey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "sqlalchemy",
    "psycopg2",
    "requests>=2.32.5",
    "google-auth>=2.49.1",
    "firebase-admin>=7.3.0",
    "cloudinary>=1.44.1",
]
